--- a/index.html
+++ b/index.html
@@ -6,23 +6,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta author="author" content="Carlos Olivira">
     <!-- Title Start -->
-    <title>Project initial</title>
+    <title>Project CEP</title>
     <!-- Style Start -->
     <link rel="stylesheet" href="assets/style/main.css">
-<!-- Favicon Start -->
+    <!-- Favicon Start -->
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png">
-
+    <!-- Icone -->
+    <script src="https://kit.fontawesome.com/ebc6f6cdfd.js" crossorigin="anonymous"></script>
+    <!-- Fonte -->
+    <link href="https://fonts.googleapis.com/css2?family=Marko+One&display=swap" rel="stylesheet">
 </head>
+
+
 <body>
 
+    <section>
+        <div class="container">
+            <div class="contactinfo">
+                <div class="containerCep">
+                    <h1>CEP</h1>
+                    <input type="text">
+                    <button type="submit" class="button">Enviar</button>
+                </div>
+                <div class="containerIcon">
+                    <ul>
+                        <li>
+                            <a href="https://www.linkedin.com/in/carlos-oliveira-ab93941a1/" target="_black">
+                                <i class="fa fa-linkedin-square" aria-hidden="true"> </i> </a></li>
+                        <li><a href="https://github.com/carlossroliveira" target="_black">
+                                <i class="fa fa-github-square" aria-hidden="true"></i> </a></li>
+                        <li><a href="https://codepen.io/carlosjs" target="_black"><i class="fa fa-codepen"
+                                    aria-hidden="true"></i></a></li>
+                    </ul>
+                </div>
+
+            </div>
+
+            <div class="contactForm">
+                <h2>Send a Message</h2>
+                <div class="formBox">
+                    <div class="inputBox w50">
+                        <input type="text" name="" required autocomplete="off">
+                        <span>First Name</span>
+                    </div>
+                    <div class="inputBox w50">
+                        <input type="text" name="" required autocomplete="off">
+                        <span>Last Name</span>
+                    </div>
+                    <div class="inputBox w50">
+                        <input type="text" name="" required autocomplete="off">
+                        <span>Email Name</span>
+                    </div>
+                    <div class="inputBox w50">
+                        <input type="text" name="" required autocomplete="off">
+                        <span>Mobile Name</span>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
-
-
+    </section>
 
     <!-- JavaScript Start -->
-    <script type="module" src="assets/js/main.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
+
 </html>
