--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="contactinfo">
                 <div class="containerCep">
                     <h1>CEP</h1>
-                    <input type="text" autofocus>
+                    <input type="text" autocomplete="off" autofocus>
                     <button type="submit" class="button">Enviar</button>
                 </div>
                 <div class="containerIcon">
@@ -49,28 +49,33 @@
             </div>
 
 
-
             <div class="contactForm">
-                <h2>Send a Message</h2>
-                <div class="formBox">
-                    <div class="inputBox w50">
-                        <input type="text" name="" required autocomplete="off">
-                        <span>First Name</span>
+                <h2>Informações</h2>
+                <div>
+                    <div>
+                        <input type="text" autocomplete="off" placeholder="UF">
                     </div>
-                    <div class="inputBox w50">
-                        <input type="text" name="" required autocomplete="off">
-                        <span>Last Name</span>
+                    <div>
+                        <input type="text" autocomplete="off" placeholder="Logradouro">
                     </div>
-                    <div class="inputBox w50">
-                        <input type="text" name="" required autocomplete="off">
-                        <span>Email Name</span>
+                    <div>
+                        <input type="text" autocomplete="off" placeholder="Complemento">
                     </div>
-                    <div class="inputBox w50">
-                        <input type="text" name="" required autocomplete="off">
-                        <span>Mobile Name</span>
+                    <div>
+                        <input type="text" autocomplete="off" placeholder="Localidade">
+                        <input type="text" autocomplete="off" placeholder="DDD">
                     </div>
+                    <div>
+                        <input type="text" autocomplete="off" placeholder="Bairro">
+                    </div>
+
+                </div>
+                <div class="ImgReset">
+                    <img src="assets/img/circular-arrow.png" alt="reset">
                 </div>
             </div>
+
+
         </div>
     </section>
 
