--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 
             <div class="contactForm">
-                <h2>Informações</h2>
+                <h2 class="title">Informações</h2>
                 <div>
                     <div>
                         <input type="text" autocomplete="off" placeholder="UF">
