--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Marko+One&display=swap" rel="stylesheet">
 </head>
 
-
 <body>
 
     <section>
         <div class="container">
+            <!-- ===== Section Main ==============================  -->
             <div data-spinner>
                 <div class="sk-cube1 sk-cube"></div>
                 <div class="sk-cube2 sk-cube"></div>
@@ -53,7 +53,7 @@
                     </ul>
                 </div>
             </div>
-
+            <!-- ===== Contact ==============================  -->
             <div class="contactForm">
                 <h2 class="title">Informações</h2>
                 <div>
@@ -99,6 +99,6 @@
     <!-- JavaScript Start -->
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="assets/js/main.js"></script>
-</body>
 
+</body>
 </html>
